added to js file

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Khula:600,800" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/skeleton.css">
-    <link href="css/style.min.css" rel="stylesheet" type="text/css">
+    <link href="css/style.css" rel="stylesheet" type="text/css">
 
     <!-- Favicon -->
   </head>
@@ -67,42 +67,58 @@
                 <h4>Skills</h4><p>(Confindence in)</p>
                 <div class="slider">
                   <label for="javascript">JavaScript :</label>
-                  <input name="javascript" type="range" min="0" max="100" value="75"/>
+                  <div class="cavity">
+                    <div class="fill javascript">
+                  </div>
                 </div>
                 <br>
                 <div class="slider">
                   <label for="ruby">Ruby :</label>
-                  <input name="ruby" type="range" min="0" max="100" value="65"/>
+                  <div class="cavity">
+                    <div class="fill ruby">
+                  </div>
                 </div>
                 <br>
                 <div class="slider">
                   <label for="css">CSS/SCSS/SASS :</label>
-                  <input name="css" type="range" min="0" max="100" value="65"/>
+                  <div class="cavity">
+                    <div class="fill css">
+                  </div>
                 </div>
                 <br>
                 <div class="slider">
                   <label for="git">git and GitHub :</label>
-                  <input name="git" type="range" min="0" max="100" value="65"/>
+                  <div class="cavity">
+                    <div class="fill git">
+                  </div>
                 </div>
                 <br>
                 <div class="slider">
                   <label for="mean">MEAN Stack :</label>
-                  <input name="mean" type="range" min="0" max="100" value="65"/>
+                  <div class="cavity">
+                    <div class="fill mean">
+                  </div>
                 </div>
                 <br>
                 <div class="slider">
                   <label for="project">Project Management :</label>
-                  <input name="project" type="range" min="0" max="100" value="65"/>
+                  <div class="cavity">
+                    <div class="fill manage">
+                  </div>
                 </div>
                 <br>
                 <div class="slider">
                   <label for="deployment">Deployment :</label>
-                  <input name="deployment" type="range" min="0" max="100" value="65"/>
+                  <div class="cavity">
+                    <div class="fill deploy">
+                  </div>
                 </div>
                 <br>
                 <div class="slider">
                   <label for="speak">Public Speaking :</label>
-                  <input name="speak" type="range" min="0" max="100" value="65"/>
+                  <div class="cavity">
+                    <div class="fill speaking">
+                  </div>
                 </div>
               </div>
               <div class="what">
@@ -307,19 +323,6 @@
                   </div>
                 </div>
               </div>
-              <!-- <div class="projectBg">
-                <div class="project">
-                  <h5>Bike London</h5>
-                  <div class="project-image .u-max-full-width">
-                    <img src="images/screenshot.png">
-                  </div>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                  <div class="projectLinks">
-                    <a class="button" href="#">See the project</a>
-                    <a class="button">See the code</a>
-                  </div>
-                </div>
-              </div> -->
             </div>
 
             <div class="contacts" id="contact">
@@ -328,7 +331,7 @@
                   <path d="M0 0 L50 100 L100 0 Z"></path>
                 </svg>
                 <h4>Contact Me</h4>
-                <p>I’m currently looking for oppourtunities. Drop me a message or connect via one of the following…</p>
+                <p class="contactBlurb">I’m currently looking for oppourtunities. Drop me a message or connect via one of the following…</p>
                 <div class="contactGroup">
                   <div class="contactOption">
                     <a href="mailto:hello@doubleucook.com?subject=I saw your website" target="_blank">
