--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                   This data was improved with the inclusion of the SITA API which gave the nearest Airport. Avoiding false positive results from google (e.g. Airport taxi companies were listed as Airports by Google Maps Places API).
                   <br><br>
                   Inclusion of more possible heist locations came about from extending the search to include banks, Jewellery stores through the Google Maps Places API.
-                  The nearest police station to the heist location is found through another call via the Google Maps Places API.  Animation is done by following the route that is returned from the directions request. Game logic is improved with the Police having a faster travel time ('optimistic' traffic and increased speed to reflect their lights and sirens.
+                  The nearest police station to the heist location is found through another call via the Google Maps Places API.  Animation is done by following the route that is returned from the directions request. Game logic is improved with the Police having a faster travel time 'optimistic' traffic with their google directions request and increased speed to reflect their lights and sirens.
                   </p>
                   <div class="techUsed">
                     <h5>Technology Used:</h5>
