fixed code button responsiveness

--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
               </div>
               <div class="why">
                 <h4>Why Development?</h4>
-                <p>After studying Industrial design and applying my knowledge of planning, prototyping, researching and developing an idea into a tanigle product I looked at other ways that I could do the same but in a different way.  I tried out a number of online courses and after comming accross General Assembly. I did a short course and then a 12-week intensive bootcamp in Web Development. After that I was hooked, solving problems in a digital way.</p>
+                <p>After studying Industrial design and applying my knowledge of planning, prototyping, researching and developing an idea into a tangible product I looked at other ways that I could do the same but in a different way. I tried out a number of online courses and after coming across General Assembly. I did a short course and then a 12-week intensive bootcamp in Web Development. After that I was hooked, solving problems in a digital way.</p>
               </div>
               <div class="skills">
-                <h4>Skills</h4><p>(Confindence in)</p>
+                <h4>Skills</h4><p>(Confidence in)</p>
                 <div class="slider">
                   <label for="javascript">JavaScript :</label>
                   <div class="cavity">
@@ -124,10 +124,10 @@
               <div class="what">
                 <h4>What am I working on now?</h4>
                 <ul>
-                  <li>I’m going back over my General Assembly projects and updating them to JavaScript ES6.</li>
-                  <li>I have a website for a family member that I’m building.</li>
-                  <li>I’m regularaly attending meetups to become more engaged with the tech community in London.</li>
-                  <li>I’m interested in learning React and I’m doing online tutorials to learn more about these exciting technologies.</li>
+                  <li>I’m going back over my General Assembly projects and updating them to JavaScript ES6 learning more about glup in the process.</li>
+                  <li>I have a website for a family member that I’m building... stay tuned.</li>
+                  <li>I’m regularly attending meetups such as LRUG and JavaScript Monthly to become more engaged with the tech community in London.</li>
+                  <li>I’m interested in learning React and I’m doing Udemy online tutorials to learn more about these exciting technologies.</li>
                 </ul>
               </div>
             </div>
@@ -198,7 +198,7 @@
                   <p>This project was about bringing together the skills we had learnt after a couple of weeks at GA in one individual project. Aim of the project was to include separate HTML / CSS / JavaScript files, host a working game somewhere on the internet.
                   <br>
                   <br>
-                  I was interested in creating a keypress control game. Similar to a car driving game but making the player a cyclist in London.
+                  I was interested in creating a key-press control game. Similar to a car driving game but making the player a cyclist in London.
                   <br>
                   <br>
                   The game requires balance. You keep your balance by tapping keys with your left hand. As you move your balance amount goes down. Just like in real life, the more you wiggle on a bike the harder it is. Direction keys enable you to control the character on screen and hopefully get them to safety. Avoid the cars, especially the black cabs! Stay safe long enough and you will be rewarded.
@@ -213,7 +213,7 @@
                     <div class="lists">
                       <div class="listOne">
                         <ul>
-                          <li>HMTL5</li>
+                          <li>HTML5</li>
                           <li>Javascript</li>
                           <li>CSS3</li>
                           <li>jQuery</li>
@@ -287,7 +287,7 @@
                   <div class="project-image .u-max-full-width">
                     <img src="images/FourLimesShop.png">
                   </div>
-                  <p>Built from scratch the idea of this project was to explore an ecommerce platform. Taking inspiration from existing fruit and vege delivery sites I set about over a week to develop, deploy and present a viable copycat site.<br><br> Integrating payment options with Stripe, building out a back end for stock and delivery management as well as UX/UI design for the store. Working along designed paths for planned user journeys. Adding in basic HTML email sending for order confirmation I explored automation of some tasks. Working to a tight deadline and on my own this was a project that I learnt alot from and hope to further develop as I experiment with future technology.</p>
+                  <p>Built from scratch the idea of this project was to explore an ecommerce platform. Taking inspiration from existing fruit and veg delivery sites I set about over a week to develop, deploy and present a viable copycat site.<br><br> Integrating payment options with Stripe, building out a back end for stock and delivery management as well as UX/UI design for the store. Working along designed paths for planned user journeys. Adding in basic HTML email sending for order confirmation I explored automation of some tasks. Working to a tight deadline and on my own this was a project that I learnt a lot from and hope to further develop as I experiment with future technology.</p>
                   <div class="techUsed">
                     <h5>Technology Used:</h5>
                     <div class="lists">
@@ -306,7 +306,7 @@
                       <div class="listTwo">
                         <ul>
                           <li>MacDown</li>
-                          <li>Adobe XD Mockup</li>
+                          <li>Adobe XD Prototype</li>
                           <li>Cyberduck</li>
                           <li>Devise<br> - Authentication</li>
                           <li>Bootstrap v4</li>
@@ -331,7 +331,7 @@
                   <path d="M0 0 L50 100 L100 0 Z"></path>
                 </svg>
                 <h4>Contact Me</h4>
-                <p class="contactBlurb">I’m currently looking for oppourtunities. Drop me a message or connect via one of the following…</p>
+                <p class="contactBlurb">I’m currently looking for opportunities. Drop me a message or connect via one of the following…</p>
                 <div class="contactGroup">
                   <div class="contactOption">
                     <a href="mailto:hello@doubleucook.com?subject=I saw your website" target="_blank">
