--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
               </div>
               <div class="why">
                 <h4>Why Development?</h4>
-                <p>After studying Industrial design and applying my knowledge of planning, prototyping, researching and developing an idea into a tangible product I looked at other ways that I could do the same but in a different way. I tried out a number of online courses and after coming across General Assembly. I did a short course and then a 12-week intensive bootcamp in Web Development. After that I was hooked, solving problems in a digital way.</p>
+                <p>After studying Industrial Design and applying my knowledge of planning, prototyping, researching and developing an idea into a tangible product, I looked at ways that I could use the same thinking but in a different way. I tried out a number of online courses and after coming across General Assembly, I did a short course and then a 12-week intensive bootcamp in Web Development. After that I was hooked, solving problems in a digital way.</p>
               </div>
               <div class="skills">
                 <h4>Skills</h4><p>(Confidence in)</p>
@@ -124,7 +124,7 @@
               <div class="what">
                 <h4>What am I working on now?</h4>
                 <ul>
-                  <li>I’m going back over my General Assembly projects and updating them to JavaScript ES6 learning more about glup in the process.</li>
+                  <li>I’m going back over my General Assembly projects and updating them to JavaScript ES6 learning more about gulp in the process.</li>
                   <li>I have a website for a family member that I’m building... stay tuned.</li>
                   <li>I’m regularly attending meetups such as LRUG and JavaScript Monthly to become more engaged with the tech community in London.</li>
                   <li>I’m interested in learning React and I’m doing Udemy online tutorials to learn more about these exciting technologies.</li>
@@ -145,11 +145,11 @@
                   <div class="project-image .u-max-full-width">
                     <img src="images/HeistAdvisors.png">
                   </div>
-                  <p>This site was built in a week long team sprint at General Assembly. The project was an exploration into the creation and consuming of API's. Simply put we created a robbery assistant app. You select a city in the world, possible heist locations are presented to you with likely odds of success and rewards. Choose the one you want and select rob the place. The game then plays the odds. Will you get to your waiting plane at the nearest airport before the police catch you?<br><br>
+                  <p>This site was built in a week long team sprint at General Assembly. The project was an exploration into the creation and consuming of APIs. Simply put, we created a robbery assistant app. You select a city in the world, possible heist locations are presented to you with likely odds of success and rewards. Choose the one you want and rob the place. The game then plays the odds. Will you get to your waiting plane at the nearest airport before the police catch you?<br><br>
                   As a team we set about building and testing an MVP(Minimum Viable Product). This came about through a basic test app. Pulling data from the Google Maps API to give a start and end location.<br><br>
-                  This data was improved with the inclusion of the SITA API which gave the nearest Airport. Avoiding false positive results from google (e.g. Airport taxi companies were listed as Airports by Google Maps Places API).
+                  This data was improved with the inclusion of the SITA API which gave the nearest airport. Avoiding false positive results from google (e.g. Airport taxi companies were listed as airports by Google Maps Places API).
                   <br><br>
-                  Inclusion of more possible heist locations came about from extending the search to include banks, Jewellery stores through the Google Maps Places API.
+                  Inclusion of more possible heist locations came about from extending the search to include banks and jewellery stores through the Google Maps Places API.
                   The nearest police station to the heist location is found through another call via the Google Maps Places API.  Animation is done by following the route that is returned from the directions request. Game logic is improved with the Police having a faster travel time 'optimistic' traffic with their google directions request and increased speed to reflect their lights and sirens.
                   </p>
                   <div class="techUsed">
@@ -198,13 +198,13 @@
                   <p>This project was about bringing together the skills we had learnt after a couple of weeks at GA in one individual project. Aim of the project was to include separate HTML / CSS / JavaScript files, host a working game somewhere on the internet.
                   <br>
                   <br>
-                  I was interested in creating a key-press control game. Similar to a car driving game but making the player a cyclist in London.
+                  I was interested in creating a key-press control game similar to a car driving game, but making the player a cyclist in London.
                   <br>
                   <br>
-                  The game requires balance. You keep your balance by tapping keys with your left hand. As you move your balance amount goes down. Just like in real life, the more you wiggle on a bike the harder it is. Direction keys enable you to control the character on screen and hopefully get them to safety. Avoid the cars, especially the black cabs! Stay safe long enough and you will be rewarded.
+                  The game requires balance. You keep your balance by tapping keys with your left hand. As you move, your balance amount goes down. Just like in real life, the more you wiggle on a bike the harder it is. Direction keys enable you to control the character on screen and hopefully get them to safety. Avoid the cars, especially the black cabs! Stay safe long enough and you will be rewarded.
                   <br>
                   <br>
-                  The biggest challenge I had was the creation of random cars. No two games of Bike London are the same. Cars are created and they have different speeds. These speeds are controlled through animations. The challenge was not in the creation of cars but in not getting the cars to overlap as this is unrealistic.
+                  The biggest challenge I had was the creation of random cars. No two games of Bike London are the same. Cars are created and they have different speeds. These speeds are controlled through animations. The challenge was not in the creation of cars, but in not getting the cars to overlap, as this is unrealistic.
                   <br>
                   <br>
                   Given more time, I would have liked to add more variation in how the road behaves with potholes, corners and more erratic driving and to force the player to start in a lane rather than in the middle of the street.</p>
@@ -242,8 +242,8 @@
                     <img src="images/AughtApp.png">
                   </div>
                   <p>Aught is a concept site for a 'thing' sharing website. Users can login and view items that people in their community are sharing and they can share items themselves.
-                  <br><br> Many high price items spend much of their time gathering dust. When we all share we all buy less stuff. Then when we do buy something then we can spend more on items that are better. In short when we share the world becomes a better place.
-                  <br><br> The site was built as Ruby on Rails project during my time in the immersive web development program at General Assembly</p>
+                  <br><br> Many high price items spend much of their time gathering dust. When we all share, we all buy less stuff. Then when we do buy something, we can spend more on items that are better. In short, when we share the world becomes a better place.
+                  <br><br> The site was built as a Ruby on Rails project during my time in the immersive web development program at General Assembly</p>
                   <div class="techUsed">
                     <h5>Technology Used:</h5>
                     <div class="lists">
@@ -287,7 +287,7 @@
                   <div class="project-image .u-max-full-width">
                     <img src="images/FourLimesShop.png">
                   </div>
-                  <p>Built from scratch the idea of this project was to explore an ecommerce platform. Taking inspiration from existing fruit and veg delivery sites I set about over a week to develop, deploy and present a viable copycat site.<br><br> Integrating payment options with Stripe, building out a back end for stock and delivery management as well as UX/UI design for the store. Working along designed paths for planned user journeys. Adding in basic HTML email sending for order confirmation I explored automation of some tasks. Working to a tight deadline and on my own this was a project that I learnt a lot from and hope to further develop as I experiment with future technology.</p>
+                  <p>Built from scratch, the idea of this project was to explore an ecommerce platform. Taking inspiration from existing fruit and veg delivery sites, I set about over a week to develop, deploy and present a viable copycat site.<br><br> Integrating payment options with Stripe, building out a back end for stock and delivery management as well as UX/UI design for the store. Working along designed paths for planned user journeys. Adding in basic HTML email sending for order confirmation, I explored automation of some tasks. Working to a tight deadline and on my own, this was a project that I learnt a lot from and hope to further develop as I experiment with future technology.</p>
                   <div class="techUsed">
                     <h5>Technology Used:</h5>
                     <div class="lists">
