corrected buttons on mobile

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="navContacts">
               <a href="https://www.linkedin.com/in/will-cook-1234" target="_blank"><h5>LinkedIn</h5></a><br>
               <!-- <a href="#"><h5>email</h5></a> -->
-              <a href="mailto:hello@doubleucook.com?subject=I saw your website"><h5>email</h5></a><br>
+              <a href="mailto:hello@doubleucook.com?subject=I saw your website"><h5>Email</h5></a><br>
               <a href="https://github.com/willcook4" target="_blank"><h5>GitHub</h5></a>
               <!-- <a href="#"><h5>Twitter</h5></a> -->
             </div>
@@ -162,7 +162,7 @@
                           <li>Mongoose</li>
                           <li>Body Parser</li>
                           <li>Cors</li>
-                          <li>Morgan - Logging</li>
+                          <li>Morgan</li>
                           <li>Underscore</li>
                           <li>Foundation</li>
                           <li>Bower</li>
@@ -174,17 +174,17 @@
                           <li>git</li>
                           <li>GitHub</li>
                           <li>Heroku</li>
-                          <li>Google Maps API <br> - inc Places Library</li>
+                          <li>Google Maps API</li>
                           <li>SITA Airports API</li>
                           <li>JavaScript</li>
                           <li>SASS</li>
-                          <!-- <li class="hidden"></li> -->
+                          <li class="hidden"></li>
                         </ul>
                       </div>
                     </div>
                   </div>
                   <div class="projectLinks">
-                    <a class="button" href="http://heist-advisors.herokuapp.com/">See the project</a>
+                    <a class="button codeBtn" href="http://heist-advisors.herokuapp.com/">See the project</a>
                     <a class="button codeBtn" href="https://github.com/willcook4/WDI_LDN_PROJECT3">See the code</a>
                   </div>
                 </div>
@@ -230,7 +230,7 @@
                     </div>
                   </div>
                   <div class="projectLinks">
-                    <a class="button" href="https://willbikelondon.herokuapp.com/" target="_blank">Try the game</a>
+                    <a class="button codeBtn" href="https://willbikelondon.herokuapp.com/" target="_blank">Try the game</a>
                     <a class="button codeBtn" href="https://github.com/willcook4/BikeLondon" target="_blank">See the code</a>
                   </div>
                 </div>
@@ -258,25 +258,27 @@
                           <li>Adobe Photoshop</li>
                           <li>MacDown</li>
                           <li>Balsamiq</li>
-                          <li>Cyberduck</li>
                         </ul>
                       </div>
                       <div class="listTwo">
                         <ul>
-                          <li>Carrierwave <br> - Image uploading</li>
-                          <li>Devise<br> - Authentication</li>
+                          <li class="hidden"></li>
+                          <li>Cyberduck</li>
+                          <li>Carrierwave</li>
+                          <li>Devise</li>
                           <li>Bootstrap v4</li>
-                          <li>Select2 - <br> JavaScript library</li>
-                          <li>Amazon Web Services</li>
+                          <li>Select2</li>
+                          <li>AWS</li>
                           <li>Heroku</li>
                           <li>PostgreSQL db</li>
+                          <li class="hidden"></li>
                           <!-- <li class="hidden"></li> -->
                         </ul>
                       </div>
                     </div>
                   </div>
                   <div class="projectLinks">
-                    <a class="button" href="http://aughtapp.herokuapp.com" target="_blank">See the project</a>
+                    <a class="button codeBtn" href="http://aughtapp.herokuapp.com" target="_blank">See the project</a>
                     <a class="button codeBtn" href='https://github.com/willcook4/WDI_Project4' target="_blank">See the code</a>
                   </div>
                 </div>
@@ -308,17 +310,17 @@
                           <li>MacDown</li>
                           <li>Adobe XD Prototype</li>
                           <li>Cyberduck</li>
-                          <li>Devise<br> - Authentication</li>
+                          <li>Devise</li>
                           <li>Bootstrap v4</li>
-                          <li>Amazon Web Services</li>
-                          <!-- <li class="hidden"></li> -->
+                          <li>AWS</li>
+                          <li class="hidden"></li>
                           <!-- <li class="hidden"></li> -->
                         </ul>
                       </div>
                     </div>
                   </div>
                   <div class="projectLinks">
-                    <a class="button" href="http://fourlimes.herokuapp.com">See the project</a>
+                    <a class="button codeBtn" href="http://fourlimes.herokuapp.com">See the project</a>
                     <a class="button codeBtn" href="https://github.com/willcook4/WDI_Project4" >See the code</a>
                   </div>
                 </div>
