validated the html

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="navContacts">
               <a href="https://www.linkedin.com/in/will-cook-1234" target="_blank"><h5>LinkedIn</h5></a><br>
               <!-- <a href="#"><h5>email</h5></a> -->
-              <a href="mailto:hello@doubleucook.com?subject=I saw your website"><h5>Email</h5></a><br>
+              <a href="mailto:hello@doubleucook.com?subject=I%20saw%20your%20website"><h5>Email</h5></a><br>
               <a href="https://github.com/willcook4" target="_blank"><h5>GitHub</h5></a>
               <!-- <a href="#"><h5>Twitter</h5></a> -->
             </div>
@@ -57,7 +57,7 @@
                   <li>Fabrication</li>
                   <li>Project Management</li>
                   <li>Tutoring and teaching</li>
-                <ul>
+                </ul>
               </div>
               <div class="why">
                 <h4>Why Development?</h4>
@@ -66,58 +66,59 @@
               <div class="skills">
                 <h4>Skills</h4><p>(Confidence in)</p>
                 <div class="slider">
-                  <label for="javascript">JavaScript :</label>
+                  <!-- <label for="javascript">JavaScript :</label> -->
+                  <span>JavaScript :</span>
                   <div class="cavity">
-                    <div class="fill javascript">
+                    <div class="fill javascript"></div>
                   </div>
                 </div>
                 <br>
                 <div class="slider">
-                  <label for="ruby">Ruby :</label>
+                  <span>Ruby :</span>
                   <div class="cavity">
-                    <div class="fill ruby">
+                    <div class="fill ruby"></div>
                   </div>
                 </div>
                 <br>
                 <div class="slider">
-                  <label for="css">CSS/SCSS/SASS :</label>
+                  <span>CSS/SCSS/SASS :</span>
                   <div class="cavity">
-                    <div class="fill css">
+                    <div class="fill css"></div>
                   </div>
                 </div>
                 <br>
                 <div class="slider">
-                  <label for="git">git and GitHub :</label>
+                  <span>git and GitHub :</span>
                   <div class="cavity">
-                    <div class="fill git">
+                    <div class="fill git"></div>
                   </div>
                 </div>
                 <br>
                 <div class="slider">
-                  <label for="mean">MEAN Stack :</label>
+                  <span>MEAN Stack :</span>
                   <div class="cavity">
-                    <div class="fill mean">
+                    <div class="fill mean"></div>
                   </div>
                 </div>
                 <br>
                 <div class="slider">
-                  <label for="project">Project Management :</label>
+                  <span>Project Management :</span>
                   <div class="cavity">
-                    <div class="fill manage">
+                    <div class="fill manage"></div>
                   </div>
                 </div>
                 <br>
                 <div class="slider">
-                  <label for="deployment">Deployment :</label>
+                  <span>Deployment :</span>
                   <div class="cavity">
-                    <div class="fill deploy">
+                    <div class="fill deploy"></div>
                   </div>
                 </div>
                 <br>
                 <div class="slider">
-                  <label for="speak">Public Speaking :</label>
+                  <span>Public Speaking :</span>
                   <div class="cavity">
-                    <div class="fill speaking">
+                    <div class="fill speaking"></div>
                   </div>
                 </div>
               </div>
@@ -143,7 +144,7 @@
                 <div class="project">
                   <h5>Heist Advisors</h5>
                   <div class="project-image .u-max-full-width">
-                    <img src="images/HeistAdvisors.png">
+                    <img src="images/HeistAdvisors.png" alt="heist advisors">
                   </div>
                   <p>This site was built in a week long team sprint at General Assembly. The project was an exploration into the creation and consuming of APIs. Simply put, we created a robbery assistant app. You select a city in the world, possible heist locations are presented to you with likely odds of success and rewards. Choose the one you want and rob the place. The game then plays the odds. Will you get to your waiting plane at the nearest airport before the police catch you?<br><br>
                   As a team we set about building and testing an MVP(Minimum Viable Product). This came about through a basic test app. Pulling data from the Google Maps API to give a start and end location.<br><br>
@@ -239,7 +240,7 @@
                 <div class="project">
                   <h5>Aught - Borrow something</h5>
                   <div class="project-image .u-max-full-width">
-                    <img src="images/AughtApp.png">
+                    <img src="images/AughtApp.png" alt="screenshot aught thing sharing site">
                   </div>
                   <p>Aught is a concept site for a 'thing' sharing website. Users can login and view items that people in their community are sharing and they can share items themselves.
                   <br><br> Many high price items spend much of their time gathering dust. When we all share, we all buy less stuff. Then when we do buy something, we can spend more on items that are better. In short, when we share the world becomes a better place.
@@ -287,7 +288,7 @@
                 <div class="project">
                   <h5>Four*Limes - eCommerce Site</h5>
                   <div class="project-image .u-max-full-width">
-                    <img src="images/FourLimesShop.png">
+                    <img src="images/FourLimesShop.png" alt="four limes shopping site">
                   </div>
                   <p>Built from scratch, the idea of this project was to explore an ecommerce platform. Taking inspiration from existing fruit and veg delivery sites, I set about over a week to develop, deploy and present a viable copycat site.<br><br> Integrating payment options with Stripe, building out a back end for stock and delivery management as well as UX/UI design for the store. Working along designed paths for planned user journeys. Adding in basic HTML email sending for order confirmation, I explored automation of some tasks. Working to a tight deadline and on my own, this was a project that I learnt a lot from and hope to further develop as I experiment with future technology.</p>
                   <div class="techUsed">
@@ -336,7 +337,7 @@
                 <p class="contactBlurb">I’m currently looking for opportunities. Drop me a message or connect via one of the following…</p>
                 <div class="contactGroup">
                   <div class="contactOption">
-                    <a href="mailto:hello@doubleucook.com?subject=I saw your website" target="_blank">
+                    <a href="mailto:hello@doubleucook.com?subject=I%20saw%20your%20website" target="_blank">
                       <div class="contactIcon"><img class="emailIcon" src="./images/email.png" alt="email icon"></div>
                       <h6>Email</h6>
                     </a>
