fixed list not rendering correctly on mobiles

--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                           <li>jQuery</li>
                           <li>CSS</li>
                           <li>HTML5</li>
-                          <li>Adobe Photoshop</li>
+                          <li>Photoshop</li>
                           <li>MacDown</li>
                           <li>Balsamiq</li>
                         </ul>
@@ -309,7 +309,7 @@
                       <div class="listTwo">
                         <ul>
                           <li>MacDown</li>
-                          <li>Adobe XD Prototype</li>
+                          <li>Adobe XD</li>
                           <li>Cyberduck</li>
                           <li>Devise</li>
                           <li>Bootstrap v4</li>
