--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
                     </a>
                   </div>
                   <div class="contactOption">
-                    <a href="https://www.linkedin.com/in/will-cook-1234" target="_blank">
+                    <a href="https://www.linkedin.com/in/will-cook" target="_blank">
                       <div class="contactIcon"><img src="./images/Lin.png" alt="LinkedIn icon"></div>
                       <h6>LinkedIn</h6>
                     </a>
