updated some project img to gif

--- a/index.html
+++ b/index.html
@@ -140,7 +140,9 @@
                 <div class="project">
                   <h5>Heist Advisors</h5>
                   <div class="project-image .u-max-full-width">
-                    <img src="images/HeistAdvisors.png" alt="heist advisors">
+                    <!-- <img src="images/HeistAdvisors.png" alt="heist advisors"> -->
+
+                    <img src="images/heistv5.gif" alt="heist advisors">
                   </div>
                   <p>This site was built in a week long team sprint at General Assembly. The project was an exploration into the creation and consuming of APIs. Simply put, we created a robbery assistant app. You select a city in the world, possible heist locations are presented to you with likely odds of success and rewards. Choose the one you want and rob the place. The game then plays the odds. Will you get to your waiting plane at the nearest airport before the police catch you?<br><br>
                   As a team we set about building and testing an MVP(Minimum Viable Product). This came about through a basic test app. Pulling data from the Google Maps API to give a start and end location.<br><br>
@@ -191,7 +193,8 @@
                 <div class="project">
                   <h5>React Todo App</h5>
                   <div class="project-image .u-max-full-width">
-                    <img src="./images/todoApp.png " alt="todo app">
+                    <!-- <img src="./images/todoApp.png " alt="todo app"> -->
+                    <img src="./images/todo.gif " alt="todo app">
                   </div>
                   <p>This was a project that I did from following the <a class="externalLinks" href="https://www.udemy.com/the-complete-react-web-app-developer-course/" target="_blank">Udemy course</a> The Complete React Web App Developer Course by Andrew Mead. The course was my intro to Webpack V2 but the course was written in V1 so I had to research and chang my config and environment to work.<br><br>
                   Login to your secure todo list with OAuth through your GitHub account (via Google Firebase), you can then View, Add and manage your todos. Your Todos are stored in a Google Firebase Database.<br><br>
@@ -240,7 +243,7 @@
                 <div class="project">
                   <h5>Bike London</h5>
                   <div class="project-image .u-max-full-width">
-                    <img src="images/bikeLondon.png" alt="Biking Game in London traffic">
+                    <img src="images/bikeLdn.gif" alt="Biking Game in London traffic">
                   </div>
                   <p>This project was about bringing together the skills we had learnt after a couple of weeks at GA in one individual project. Aim of the project was to include separate HTML / CSS / JavaScript files, host a working game somewhere on the internet.
                   <br>
