added gif for aughtapp

--- a/index.html
+++ b/index.html
@@ -289,7 +289,8 @@
                 <div class="project">
                   <h5>Aught - Borrow something</h5>
                   <div class="project-image .u-max-full-width">
-                    <img src="images/AughtApp.png" alt="screenshot aught thing sharing site">
+                    <!-- <img src="images/AughtApp.png" alt="screenshot aught thing sharing site"> -->
+                    <img src="images/aught.gif" alt="screenshot aught thing sharing site">
                   </div>
                   <p>Aught is a concept site for a 'thing' sharing website. Users can login and view items that people in their community are sharing and they can share items themselves.
                   <br><br> Many high price items spend much of their time gathering dust. When we all share, we all buy less stuff. Then when we do buy something, we can spend more on items that are better. In short, when we share the world becomes a better place.
@@ -338,6 +339,7 @@
                   <h5>Four*Limes - eCommerce Site</h5>
                   <div class="project-image .u-max-full-width">
                     <img src="images/FourLimesShop.png" alt="four limes shopping site">
+                    <!-- <img src="images/FourLimesShop.png" alt="four limes shopping site"> -->
                   </div>
                   <p>Built from scratch, the idea of this project was to explore an ecommerce platform. Taking inspiration from existing fruit and veg delivery sites, I set about over a week to develop, deploy and present a viable copycat site.<br><br> Integrating payment options with Stripe, building out a back end for stock and delivery management as well as UX/UI design for the store. Working along designed paths for planned user journeys. Adding in basic HTML email sending for order confirmation, I explored automation of some tasks. Working to a tight deadline and on my own, this was a project that I learnt a lot from and hope to further develop as I experiment with future technology.</p>
                   <div class="techUsed">
